02-infra/wave-00-secrets/00-eso/netPolAllowEgressToVault.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "0"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
  name: allow-egress-to-vault
  namespace: external-secrets
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: external-secrets
  policyTypes:
    - Egress
  egress:
    # 1. Allow traffic to Vault via Namespace Label
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: vault-system
      ports:
        - protocol: TCP
          port: 8200
          
    # 2. THE FIX: Bypass labels and allow the raw OpenShift Service Subnet (API + DNS)
    - to:
        - ipBlock:
            cidr: 172.30.0.0/16
